@@ -2,6 +2,7 @@
     added sort options #87 #37 #23
     partially updated russian translation ru.po
     smart size display for free space and tasks closes #115
+    case insensitive sort detect created all files #119
 0.7.9:  2012-07-13:
     new threading for tasks
     network filesystem lag issues improved
